// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateApp > should generate the app script for a dynamic page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/posts/:slug",
    "path": "/posts/my-first-post"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "post": {
    "type": "post",
    "id": "post"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/posts/:slug": () => import("@/pages/post.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a page that has metadata 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/blog",
    "path": "/blog"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "blog": {
    "type": "blog",
    "id": "blog",
    "name": "Matteo Antony",
    "posts": []
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/blog": () => import("@/pages/blog.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a page with an entity 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/about",
    "path": "/about"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "about": {
    "type": "about",
    "id": "about",
    "name": "Us"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/about": () => import("@/pages/about.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a static page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/",
    "path": "/"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "index": {
    "type": "index",
    "id": "index"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/": () => import("@/pages/index.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;
